# cs221m-course

./: .gitignore  .gitmodules  02_review_of_lms.ipynb  03_behavioral_analysis.ipynb  04_probes.ipynb  05_interventions.ipynb  06_causal_mediation_analysis.ipynb  06_interventions.ipynb  07_causal_abstraction_i.ipynb  08_causal_mediation_analysis.ipynb  09_automated_causal_interpretability.ipynb  10_causal_abstraction_ii.ipynb  README.md  lecture_1.ipynb  lecture_1_intro_to_lms.ipynb  lecture_3_probes.ipynb  lecture_4_interventions.ipynb  pyproject.toml  requirements.txt
requirements/: 02_review_of_lms.txt  03_behavioral_analysis.txt  09_counterfactual_design.txt
utils/: lecture_09_utils.py
