[project]
name = "cs221m-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaleido>=0.4.2",
    "nnsight>=0.5.15",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "scipy>=1.17.1",
    "transformers>=5.2.0",
]
