[project]
name = "cs221m-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "causalab",
    "einops>=0.8.2",
    "jupyter>=1.1.1",
    "kaleido>=0.4.2",
    "nnsight>=0.5.15",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pyvene>=0.1.8",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.2.0",
]

[tool.uv.workspace]
members = [
    "causalab",
]

[tool.uv.sources]
causalab = { workspace = true }
